@@ -1,0 +1,14 @@
+<html>
+<head>
+<title>Karl Admin Pages</title>
+</head>
+<body>
+<h1>Karl Admin Pages</h1>
+<ul>
+<li><a href="/server-status-open-says-me">Apache Server Status</a></li>
+<li><a href="/zodbinfo.html">ZODB Cache (Main)</a></li>
+<li><a href="/people/zodbinfo.html">ZODB Cache (Ghetto)</a></li>
+<li><a href="/__error_log__">Error Log</a></li>
+</ul>
+</body>
+</html>
